--- a/Gestion_AcademicoAdministrativa_Abastos/App.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/App.xaml
@@ -23,4 +23,16 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
+    <JumpList.JumpList>
+        <JumpList>
+            <JumpList.JumpItems>
+                <JumpTask Title="Sitio web"
+                          ApplicationPath="http://mestreacasa.gva.es/web/guest/inicio"/>
+                <JumpTask Title="Twitter"
+                          ApplicationPath="https://twitter.com/institutabastos"/>
+                <JumpTask Title="Facebook"
+                          ApplicationPath="https://es-es.facebook.com/pages/category/Junior-High-School/IES-abastos-111948078841463/"/>
+            </JumpList.JumpItems>
+        </JumpList>
+    </JumpList.JumpList>
 </Application>
