Fix Multiple Bugs In ChangePassword

--- a/Gestion_AcademicoAdministrativa_Abastos/ChangePassword.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/ChangePassword.xaml
@@ -60,7 +60,7 @@
                                 <RowDefinition Height="65*" />
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0" Content="Contraseña Nueva"/>
-                            <PasswordBox x:Name="TxtNewPassword" Grid.Row="1" TextChanged="TxtNewPassword_TextChanged"/>
+                            <PasswordBox x:Name="TxtNewPassword" Grid.Row="1" PasswordChanged="TxtNewPassword_PasswordChanged"/>
                             <ProgressBar x:Name="StrengthLevel" Grid.Column="1" Grid.Row="1"/>
                         </Grid>
                         <Grid Grid.Row="5">
