--- a/Gestion_AcademicoAdministrativa_Abastos/UserPanel.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/UserPanel.xaml
@@ -32,58 +32,79 @@
                     </Grid.RowDefinitions>
                     <TabControl Grid.Column="1" Grid.Row="1" Background="{DynamicResource MainColorSolid}" BorderBrush="Transparent">
                         <TabItem Header="Crear Usuario">
-                            <Grid Margin="15">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="5*" />
+                                    <ColumnDefinition Width="90*" />
+                                    <ColumnDefinition Width="5*" />
+                                </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="10*" />
                                     <RowDefinition Height="5*" />
+                                    <RowDefinition Height="15*" />
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="10*" />
                                     <RowDefinition Height="5*" />
                                     <RowDefinition Height="5*" />
                                     <RowDefinition Height="10*" />
                                     <RowDefinition Height="5*" />
                                 </Grid.RowDefinitions>
-                                <Grid Grid.Row="0">
+                                <Grid Grid.Row="1" Grid.Column="1">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="35*" />
                                         <RowDefinition Height="65*" />
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="50*" />
-                                        <ColumnDefinition Width="50*" />
+                                        <ColumnDefinition Width="40*" />
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="40*" />
                                     </Grid.ColumnDefinitions>
                                     <Label Grid.Column="0" Grid.Row="0" Content="Usuario" />
                                     <TextBox x:Name="TxtUsername" Grid.Column="0" Grid.Row="1"/>
-                                    <Label Grid.Column="1" Grid.Row="0" Content="Contraseña" />
-                                    <TextBox x:Name="TxtPassword" Grid.Column="1" Grid.Row="1" />
+                                    <Label Grid.Column="2" Grid.Row="0" Content="Contraseña" />
+                                    <TextBox x:Name="TxtPassword" Grid.Column="2" Grid.Row="1" />
                                 </Grid>
-                                <Label Grid.Row="1" Content="Persona" />
-                                <TextBox x:Name="TxtPersona" Grid.Column="0" Grid.Row="2"/>
-                                <Label Grid.Row="3" Content="Grupo de Usuarios" />
-                                <ComboBox x:Name="ComboBoxPermisos" Grid.Row="4" />
+                                <Label Grid.Row="3" Content="Persona" Grid.Column="1" />
+                                <TextBox x:Name="TxtPersona" Grid.Column="1" Grid.Row="4"/>
+                                <Label Grid.Row="6" Content="Grupo de Usuarios" Grid.Column="1" />
+                                <ComboBox x:Name="ComboBoxPermisos" Grid.Row="7" Grid.Column="1" />
                             </Grid>
                         </TabItem>
                         <TabItem Header="Permisos de Usuario">
                             <Grid>
                                 <Grid.RowDefinitions>
+                                    <RowDefinition Height="5*" />
                                     <RowDefinition Height="30*" />
+                                    <RowDefinition Height="5*" />
                                     <RowDefinition Height="10*" />
-                                    <RowDefinition Height="60*" />
+                                    <RowDefinition Height="5*" />
+                                    <RowDefinition Height="50*" />
+                                    <RowDefinition Height="5*" />
                                 </Grid.RowDefinitions>
-                                <Grid Margin="15">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="5*" />
+                                    <ColumnDefinition Width="90*" />
+                                    <ColumnDefinition Width="5*" />
+                                </Grid.ColumnDefinitions>
+                                <Grid Grid.Column="1" Grid.Row="1">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="50*" />
                                         <ColumnDefinition Width="50*" />
                                     </Grid.ColumnDefinitions>
                                     <Grid Grid.Column="0">
                                         <Grid.RowDefinitions>
-                                            <RowDefinition Height="15*" />
-                                            <RowDefinition Height="20*" />
-                                            <RowDefinition Height="15*" />
-                                            <RowDefinition Height="40*" />
+                                            <RowDefinition Height="5*" />
+                                            <RowDefinition Height="10*" />
+                                            <RowDefinition Height="30*" />
+                                            <RowDefinition Height="10*" />
+                                            <RowDefinition Height="10*" />
+                                            <RowDefinition Height="30*" />
+                                            <RowDefinition Height="5*" />
                                         </Grid.RowDefinitions>
-                                        <Label Grid.Row="0" Content="Nombre" />
-                                        <TextBox Grid.Row="1" x:Name="TxtNombre" />
-                                        <Label Grid.Row="2" Content="Descripcion" />
-                                        <TextBox Grid.Row="3" x:Name="TxtDescripcion" Padding="15,15,0,0" VerticalContentAlignment="Top"/>
+                                        <Label Grid.Row="1" Content="Nombre" />
+                                        <TextBox Grid.Row="2" x:Name="TxtNombre" />
+                                        <Label Grid.Row="4" Content="Descripcion" />
+                                        <TextBox Grid.Row="5" x:Name="TxtDescripcion" Padding="15,15,0,0" VerticalContentAlignment="Top"/>
                                     </Grid>
                                     <Grid Grid.Column="1">
                                         <Grid.RowDefinitions>
@@ -103,7 +124,7 @@
                                         <CheckBox x:Name="CheckBoxPermisoAlumno" Grid.Column="1" Grid.Row="3" Content="Permiso de Alumno" />
                                     </Grid>
                                 </Grid>
-                                <Grid Grid.Row="1">
+                                <Grid Grid.Row="3" Grid.Column="1">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="25*" />
                                         <ColumnDefinition Width="50*" />
@@ -111,7 +132,7 @@
                                     </Grid.ColumnDefinitions>
                                     <Button Grid.Column="1" x:Name="CreatePermisoButton" Content="Crear Permiso" Click="CreatePermisoButton_Click"/>
                                 </Grid>
-                                <DataGrid Grid.Row="2" x:Name="DataGridPermisos" AutoGenerateColumns="True" ColumnWidth="*" />
+                                <DataGrid Grid.Row="5" Grid.Column="1" x:Name="DataGridPermisos" AutoGenerateColumns="True" ColumnWidth="*" />
                             </Grid>
                         </TabItem>
                     </TabControl>
